# redline

./: Cargo.toml  README.md
.github/workflows/: release.yml
email-app/: package.json
email-app/src/: App.css  App.tsx
email-app/src-tauri/: Cargo.toml  tauri.conf.json
email-app/src-tauri/src/: lib.rs  main.rs
email-app/src/lib/: api.ts
redline-app/: index.html  package.json
redline-app/src/: App.css  App.tsx
redline-app/src-tauri/: Cargo.toml  tauri.conf.json
redline-app/src-tauri/icons/: icon.icns
redline-app/src-tauri/src/: lib.rs  main.rs
redline-app/src/lib/: api.ts
skills/redline/: SKILL.md
src/: deriver.rs  lib.rs  main.rs  mcp.rs  pi_context.rs
