[package]
name = "email-learn"
version = "0.1.0"
edition = "2021"

[lib]
name = "email_learn"
path = "src/lib.rs"

[[bin]]
name = "email-learn"
path = "src/main.rs"

[workspace]
members = ["email-app/src-tauri"]
resolver = "2"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
similar = { version = "2.5", features = ["text"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
