[package]
name = "redline"
version = "0.1.0"
edition = "2021"

[lib]
name = "redline"
path = "src/lib.rs"

[[bin]]
name = "redline"
path = "src/main.rs"

[workspace]
members = ["redline-app/src-tauri"]
resolver = "2"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
similar = { version = "2.5", features = ["text"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"

# MCP server (the `mcp` subcommand). rmcp is the official Rust MCP SDK;
# transport-io enables the stdio transport agents launch over.
rmcp = { version = "2.2", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
